--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,27 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.72'
+
+    ext{
+        kotlin_version = '1.3.72'
+        material_version = '1.1.0'
+
+        nav_version = "2.3.0-beta01"
+        lifecycle_version = "2.2.0"
+        arch_version = "2.1.0"
+        room_version = "2.2.5"
+        coroutines_version = "1.3.7"
+    }
+
     repositories {
         google()
         jcenter()
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.2'
+        classpath 'com.android.tools.build:gradle:4.0.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
