--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,12 +9,12 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.3"
 
-    dataBinding{
-        enabled true
+    buildFeatures{
+        dataBinding = true
     }
 
     defaultConfig {
-        applicationId "com.harish.bucketlistprojectsubmission"
+        applicationId "com.harish.dreambuckets"
         minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
@@ -39,6 +39,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
@@ -51,6 +52,7 @@ dependencies {
     //Annotation Processors
     kapt "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
     kapt "androidx.room:room-compiler:$room_version"
+    kapt 'com.android.databinding:compiler:3.1.4'
 
     //Navigation Components with UI and safe args
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
@@ -71,6 +73,7 @@ dependencies {
     //Co-routines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
+
 
 
 
