--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,9 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven {
+            url "https://maven.google.com"
+        }
         
     }
     dependencies {
