--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,8 @@ buildscript {
         arch_version = "2.1.0"
         room_version = "2.2.5"
         coroutines_version = "1.3.7"
+
+        lottieVersion = "3.4.0"
     }
 
     repositories {
@@ -19,6 +21,9 @@ buildscript {
         maven {
             url "https://maven.google.com"
         }
+
+        maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
+        maven { url "https://oss.sonatype.org/content/repositories/releases" }
         
     }
     dependencies {
