Added Delete Query in DAO User could delete a dream Added Alert Dialog while deleting a dream Added a layer with delete icon under the viewHolder

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,8 +16,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.BucketAddActivity" />
-        <activity android:name=".ui.DashboardActivity">
+        <activity android:name=".ui.activities.BucketAddActivity" />
+        <activity android:name=".ui.activities.DashboardActivity">
         </activity>
 
         <meta-data
