--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,8 @@ buildscript {
             url "https://maven.google.com"
         }
 
+        maven { url "https://jitpack.io" }
+
         maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
         maven { url "https://oss.sonatype.org/content/repositories/releases" }
         
