--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript {
 
     ext{
         kotlin_version = '1.3.72'
-        material_version = '1.1.0'
+        material_version = "1.2.0-beta01"
 
         nav_version = "2.3.0-beta01"
         lifecycle_version = "2.2.0"
