Redesigned AboutFragment.kt Implemented Implicit Intents Fixed status bar color

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,5 +77,8 @@ dependencies {
     //Lottie
     implementation "com.airbnb.android:lottie:$lottieVersion"
 
+    //Circle ImageView
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
 
 }
