Redesigned AboutFragment.kt (1) Added AboutPage library Modified alert dialog

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,5 +80,9 @@ dependencies {
     //Circle ImageView
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
+    //About page
+    implementation 'com.github.medyo:android-about-page:1.2.6'
+
+
 
 }
