Implemented Dark Mode Created new values folder for dark mode Fixed some bugs

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,9 @@
         </activity>
         <activity android:name=".ui.activities.BucketAddActivity">
         </activity>
-        <activity android:name=".ui.activities.DashboardActivity">
+        <activity
+            android:name=".ui.activities.DashboardActivity">
+
         </activity>
 
         <meta-data
