--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ buildscript {
         coroutines_version = "1.3.7"
 
         lottieVersion = "3.4.0"
+        activityVersion = "1.2.0-alpha06"
     }
 
     repositories {
