Bug Fix in container_home_display.xml

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,9 @@
         <activity android:name=".ui.activities.BucketAddActivity">
         </activity>
         <activity
-            android:name=".ui.activities.DashboardActivity">
+            android:name=".ui.activities.DashboardActivity"
+            android:launchMode="singleTask"
+            >
 
         </activity>
 
