--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,10 @@ dependencies {
     //Material
     implementation "com.google.android.material:material:$material_version"
 
+    //ViewPager2
+    implementation "androidx.viewpager2:viewpager2:$viewpager_version"
+
+
     //Annotation Processors
     kapt "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
     kapt "androidx.room:room-compiler:$room_version"
@@ -90,6 +94,9 @@ dependencies {
     //About page
     implementation 'com.github.medyo:android-about-page:1.2.6'
 
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 
 
 }
