Updated UI of DreamsTab.kt Updated UI of DashboardActivity.kt

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -95,8 +95,12 @@ dependencies {
     implementation 'com.github.medyo:android-about-page:1.2.6'
 
     //Glide
-    implementation 'com.github.bumptech.glide:glide:4.11.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+    implementation "com.github.bumptech.glide:glide:$glide_version"
+    annotationProcessor "com.github.bumptech.glide:compiler:$glide_version"
+
+    //LeakCanary
+    debugImplementation "com.squareup.leakcanary:leakcanary-android:$leakcanary_version"
+
 
 
 }
