--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.harish.dreambuckets">
 
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -12,6 +12,7 @@
         android:roundIcon="@mipmap/ic_bucket_icon_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".ui.activities.DetailedBucketActivity"></activity>
         <activity android:name=".ui.splash.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,13 +24,8 @@
             android:name=".ui.activities.BucketAddActivity"
             android:parentActivityName=".ui.activities.DashboardActivity"
             android:screenOrientation="portrait"
-            >
-
-        </activity>
-        <activity
-            android:name=".ui.activities.DashboardActivity">
-
-        </activity>
+            android:theme="@style/AppTheme.statusBarTransparent"></activity>
+        <activity android:name=".ui.activities.DashboardActivity"></activity>
 
         <meta-data
             android:name="preloaded_fonts"
