Updated UI of fragment_about.xml Modified Database by adding accompolished field Updated DreamsTab.kt to show only dreams Updated MemoriesTab.kt to show only memories

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,9 @@
         android:roundIcon="@mipmap/ic_bucket_icon_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.activities.DetailedBucketActivity"></activity>
+        <activity android:name=".ui.activities.DetailedBucketActivity"
+                    android:theme="@style/AppTheme.detailedActivity"
+            ></activity>
         <activity android:name=".ui.splash.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
