--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,26 +1,36 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
 apply plugin: "androidx.navigation.safeargs.kotlin"
+apply plugin: 'kotlin-parcelize'
 apply plugin: 'kotlin-kapt'
 
 
 android {
-    compileSdkVersion 29
-    buildToolsVersion "29.0.3"
+    compileSdkVersion 36
 
     buildFeatures{
-        dataBinding = true
+        dataBinding true
+        viewBinding true
     }
 
     defaultConfig {
         applicationId "com.harish.dreambuckets"
-        minSdkVersion 21
-        targetSdkVersion 29
+        minSdkVersion 23
+        targetSdkVersion 35
         versionCode 2
         versionName "1.1"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    // And this block to ensure Kotlin respects the same version
+    kotlinOptions {
+        jvmTarget = '1.8'
     }
 
     buildTypes {
@@ -29,78 +39,70 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    namespace 'com.harish.dreambuckets'
 
 }
 
 dependencies {
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    // Use the variable for the kotlin standard library
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.3.0'
-    implementation "androidx.constraintlayout:constraintlayout:2.0.0-beta7"
+    implementation 'androidx.appcompat:appcompat:1.7.1'
+    implementation 'androidx.core:core-ktx:1.17.0'
+    implementation "androidx.constraintlayout:constraintlayout:2.2.1"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-
-
-
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.3.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.7.0'
 
     //Dependencies for this app
 
-    //Activity KTX
+    //Activity KTX - Use the variable
     implementation "androidx.activity:activity-ktx:$activityVersion"
 
-
-    //Material
+    //Material - Use the variable
     implementation "com.google.android.material:material:$material_version"
 
-    //ViewPager2
+    //ViewPager2 - Use the variable
     implementation "androidx.viewpager2:viewpager2:$viewpager_version"
 
-
     //Annotation Processors
+    // Use the variable for Lifecycle and Room compilers
     kapt "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
     kapt "androidx.room:room-compiler:$room_version"
+    // This databinding compiler is very old and might not be needed with modern AGP.
+    // If you get errors, you can try removing it.
     kapt 'com.android.databinding:compiler:3.1.4'
 
-    //Navigation Components with UI and safe args
+    //Navigation Components with UI and safe args - Use the variable
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
-    //ViewModel
+    //ViewModel - Use the variable
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:$lifecycle_version"
 
-    //LiveData
+    //LiveData - Use the variable
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
 
-    //Room
+    //Room - Use the variable
     implementation "androidx.room:room-runtime:$room_version"
     //Kotlin Extensions and Coroutines support for Room
     implementation "androidx.room:room-ktx:$room_version"
 
-    //Co-routines
+    //Co-routines - Use the variable
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
 
-    //Lottie
+    //Lottie - Use the variable
     implementation "com.airbnb.android:lottie:$lottieVersion"
 
     //Circle ImageView
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
-    //About page
-    implementation 'com.github.medyo:android-about-page:1.2.6'
-
-    //Glide
+    //Glide - Use the variable
     implementation "com.github.bumptech.glide:glide:$glide_version"
-    annotationProcessor "com.github.bumptech.glide:compiler:$glide_version"
-
-    //LeakCanary
-//    debugImplementation "com.squareup.leakcanary:leakcanary-android:$leakcanary_version"
-
-
-
+    // Glide's annotation processor has been replaced by kapt. This line should be changed.
+    kapt "com.github.bumptech.glide:compiler:$glide_version"
 }
