--- a/build.gradle
+++ b/build.gradle
@@ -3,26 +3,24 @@
 buildscript {
 
     ext{
-        kotlin_version = '1.3.72'
-        material_version = "1.2.0-beta01"
-        viewpager_version = '1.0.0'
+        kotlin_version = '2.1.0'
+        material_version = "1.11.0"
+        viewpager_version = '1.1.0'
 
-        nav_version = "2.3.0-beta01"
-        lifecycle_version = "2.2.0"
+        nav_version = "2.7.5"
+        lifecycle_version = "2.7.0"
         arch_version = "2.1.0"
-        room_version = "2.2.5"
-        coroutines_version = "1.3.7"
+        room_version = "2.7.0-alpha01"
+        coroutines_version = "1.8.0"
 
-        lottieVersion = "3.4.0"
-        activityVersion = "1.2.0-alpha06"
+        lottieVersion = "6.3.0"
+        activityVersion = "1.8.2"
 
-        glide_version = "4.11.0"
-        leakcanary_version = "2.4"
+        glide_version = "4.16.0"
     }
 
     repositories {
         google()
-        jcenter()
         maven {
             url "https://maven.google.com"
         }
@@ -31,10 +29,12 @@ buildscript {
 
         maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
         maven { url "https://oss.sonatype.org/content/repositories/releases" }
-        
+
+        mavenCentral() // <-- ADD THIS LINE
+
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.0.0'
+        classpath 'com.android.tools.build:gradle:8.9.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
 
@@ -46,8 +46,8 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
-        
+        mavenCentral()
+        maven { url "https://jitpack.io" }
     }
 }
 
