FEATURE added keystore alias and passwords

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,18 @@ android {
         jvmTarget = '1.8'
     }
 
+    signingConfigs {
+        release {
+            // You need to specify the path to your keystore file
+            storeFile file("your_keystore_file.jks")
+            // You can either hardcode the password here or, for better security,
+            // read it from a properties file or environment variable
+            storePassword "harish@123"
+            keyAlias "harish"
+            keyPassword "harish@123"
+        }
+    }
+
     buildTypes {
         release {
             minifyEnabled false
